<resources>

    <string name="tv_perfil">Informacion del perfil</string>
    <string name="et_nom_ape">Nombre y Apellidos</string>
    <string name="et_email">Email</string>
    <string name="et_numTelf">Número de teléfono</string>
    <string name="et_nomUsuario">Nombre de usuario</string>
    <string name="btn_guardar_perfil">Guardar</string>
    <string name="title_activity_comentarios">Comentarios</string>
    <string name="tv_air_today">Air Today</string>
    <string name="tv_version">Version 1.0.0</string>
    <string name="tv_sugerencias">Envíanos tus sugerencias</string>
    <string name="tv_politica">Política de privacidad</string>
    <string name="tv_recomendar">Recomendar app</string>
    <string name="tv_redes">Síguenos en redes sociales:</string>
    <string name="title_activity_mapa">Map</string>


    <string name="app_name">Proyecto Integrador</string>
    <string name="tv_nombre_app">Air Today</string>
    <string name="btn_siguiente">Continuar</string>
    <string name="hUsuario">Usuario</string>
    <string name="hPassword">Contraseña</string>
    <string name="btn_entrar">Entrar!</string>
    <string name="tv_nuevo">¿Eres nuevo/a aquí?</string>
    <string name="tv_signUp">SIGN UP</string>
    <string name="brn_continuar">Entrar</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="h_nombre">Introduce tu nombre:</string>
    <string name="h_usuario">Introduce tu nombre de usuario:</string>
    <string name="h_mail">Introduce el mail:</string>
    <string name="h_email">Introduce tu email:</string>
    <string name="h_password">Introduce la contraseña:</string>
    <string name="h_confirm_password">Introduce de nuevo la contraseña:</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="tv_confirmacion">Se ha registrado correctamente, inicie sesión y podrá entrar en nuestra app!!</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="NomApe">Nombre y apellidos</string>
</resources>
