<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogIn"
    android:background="#1B618C">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="400dp"
        android:layout_height="360dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="-163dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-45dp"
        android:text="@string/tv_nombre_app"
        android:textColor="@android:color/white"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:hint="@string/hUsuario"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsuario"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/hPassword"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/btn_entrar"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEntrar"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_nuevo"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnEntrar"
        android:layout_marginLeft="253dp"
        android:layout_marginTop="18dp"
        android:text="@string/tv_signUp"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>